:recycle: improve responsivity, fix background not covering all body

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -3,6 +3,7 @@
     font-size: 16px;
     line-height: 26px;
     margin: 0;
+    height: 100%;
 }
 
 :global(h1) {
